working on small bugs

--- a/src/assets/index.css
+++ b/src/assets/index.css
@@ -560,12 +560,24 @@ div.journal {
 
 .dark-mode-content div {
 	background: #000000;
-	color: rgba(255, 255, 255, 0.826);
+	color: rgb(255, 255, 255);
 }
 
-.dark-mode-content img {
-	border-radius: 1em;
+.dark-mode-content input {
+	color: whitesmoke;
 }
+
+.dark-mode-content ::placeholder {
+	color: whitesmoke;
+}
+
+.dark-mode-screen .dark-mode-content {
+	background-color: #000000;
+	height: 100%;
+	width: 100%;
+}
+
+
 
 .zone7-content {
 	background-color: #72c17b;
@@ -689,4 +701,12 @@ div.journal {
  
 .plant-list-favorites {
 	border: 1px black;
+}
+
+.fav-no {
+    background: url("./img/dislike.svg") no-repeat;
+}
+
+.fav-yes {
+    background: url("./img/like.svg") no-repeat;
 }
