--- a/src/assets/toggleDark.css
+++ b/src/assets/toggleDark.css
@@ -70,7 +70,7 @@
     height: 12px;
     width: 12px;
     left: 5px;
-    bottom: 5px;
+    bottom: 2px;
     border-radius: 30px;
     background-color: #fff;
 }
